# multiarch-nuget

./: README.md
LibA/: CMakeLists.txt  CMakePresets.json  build.bat
LibA/managed/: AssemblyInfo.cpp  CMakeLists.txt  LibA.cpp  LibA.h
LibA/native/: CMakeLists.txt  NativeLibA.cpp  NativeLibA.h
LibB/: Calculator.cs  LibB.csproj
Test/: App.cs  App.csproj
